--- a/wiki/PDNSCactiGraphs.wiki
+++ b/wiki/PDNSCactiGraphs.wiki
@@ -3,12 +3,12 @@
 = Graphing PDNS using Cacti =
 There are several ways to monitor PowerDNS through Cacti, the data template we provide makes use of [http://nagios.sourceforge.net/docs/nrpe/NRPE.pdf NRPE] (Nagios Remote Plugin Executor).
 
-Therefore the following steps will apply just to the above method but with a bit of fiddling you can use it with other input methods such SNMP.
+Therefore the following steps will just apply to the above method but with a bit of fiddling you can use it with other input methods such SNMP.
 
 == Configuring PowerDNS Server ==
 
  * Place *cacti_pdns.rb* under your */usr/local/bin* path
- * If you run your nrpe plugins under an unprivileged user (e.g nagios) then you will have to add to your sudoers file an entry like: 
+ * If you run your nrpe plugins under an unprivileged user (e.g nagios) then a sudoers entry needs to be added: 
 {{{
 nagios ALL = NOPASSWD: /usr/local/bin/cacti_pdns.rb
 }}}
@@ -35,7 +35,7 @@ command[check_cacti-pdns]=sudo /usr/local/bin/cacti_pdns.rb
 
    http://www.devco.net/images/cacti/cacti_save_datasource.png
 
- * Last step will be creating the graphs for the PowerDNS hosts. Still under Management, go to Graph Management and then click on Add on the top right corner of the page. 
+ * Last step will be creating the graphs for the PowerDNS hosts. Still under Management, go to Graph Management and then click on Add at the top right corner of the page. 
 
    http://www.devco.net/images/cacti/cacti_graph_mgmt_add_graph.png
 
