--- a/wiki/ReferenceInstallGuide.wiki
+++ b/wiki/ReferenceInstallGuide.wiki
@@ -40,25 +40,16 @@ In the current release - 0.3 as of time of writing - we provide a RedHat Source 
  * Install once you've met all the listed requirements above simply install the rpm using _rpm -ivh ruby-pdns-0.3rc1-46.el5.noarch.rpm_
  * The RPM will set up log directories in _/var/log/pdns_ and install all the needed libraries into the Ruby site directory etc, it will also install a config file and sample records.
 
-=== Installing using the source ===
-As mentioned this is a bit of a manual process today we're likely to provide a Gem or something in future, basic steps once PowerDNS has been installed should be:
+=== Installing using RubyGems ===
+You can install using the rubygem provided, if we do not provide packages for your distribution this is the prefered method.
 
-You need to know ahead of time:
- * Your ruby site library path, you can find this using: _ruby -rrbconfig -e "puts Config::CONFIG['sitelibdir']"_
- * The username your pdns runs as, generally this is pdns
+ * Get the gem from [http://code.google.com/p/ruby-pdns/downloads/list download list]
+ * Install once you've met all the listed requirements above simply install the gem using _gem install --bindir /usr/sbin install ruby-pdns-0.4.1.gem_
+ * Unfortunately as a packaging system RubyGems is just barely functional so you need to do some hand work:
+   * Create the directory _/var/log/pdns_ and set ownership to _pdns:pdns_
+   * Create the directory _/etc/pdns/records_ 
 
-Now do:
- * Create directory _/etc/pdns/records_ 
- * Create directory _/var/log/pdns_ owned by _pdns:pdns_
- * Extract the tar file into a temp directory
- * Copy _records/`*`_ to _/etc/pdns/records_
- * Copy _pdns.rb_ to your ruby _sitelibdir_
- * Create _sitelibdir/pdns_
- * Copy _pdns/`*`_ to _sitelibdir/pdns/_
- * Copy _pdns-pipe-runner.rb_ to _/usr/sbin/_ and mark it executable
- * Copy _etc/pdns-ruby-backend-dist.cfg_ to _/etc/pdns/pdns-ruby-backend.cfg_
-
-This should more or less get you up to the same place as simply installing the RPM
+ *Note:* The configuration instructions below assume you have the default config file in _/etc/pdns_ if you install with the gem samples will be in your rubygems directories you'll need to either start a new config file on your own or grab them from there, see _gem contents ruby-pdns_ for the locations.
 
 === Configuring Ruby PDNS ===
 You now need to tune the _/etc/pdns/pdns-ruby-backend.cfg_ to your tastes, the defaults given should be fairly obvious and would work out the box on a CentOS machine.  See the full [ReferenceConfigurationGuide Ruby PDNS Configuration Guide] for details on all the possible settings.
