Update issue 7 Can now have lines like:
geoip.dblocation = /foo.dat

In the config, this will be stored keyd on 'geoip' and can be retrieved with 
get_module_config('geoip')

Documentation has been updated with a sample

--- a/wiki/ReferenceConfigurationGuide.wiki
+++ b/wiki/ReferenceConfigurationGuide.wiki
@@ -20,6 +20,14 @@ Comments starting with _#_ and new lines are allowed and will be ignored.
 ||geoipdb||/var/lib/GeoIP/GeoIP.dat||Full path||Where to find the GeoIP.dat file||
 ||maint_interval||60||Integer numbers in seconds||How often to run maintenance like dumping stats and clearing caches||
 
+Additional module configuration can be done in this file using lines like these:
+
+{{{
+geoip.dblocation = /var/lib/GeoIP/GeoIP.dat
+}}}
+
+The meaning of these will be documented in the docs for each specific module like the [ReferenceGeoIP GeoIP module]
+
 A sample file can be seen below
 
 {{{
@@ -34,6 +42,7 @@ keep_logs = 10
 max_log_size = 1024000
 geoipdb = /var/lib/GeoIP/GeoIP.dat
 maint_interval = 60
+geoip.dblocation = /var/lib/GeoIP/GeoIP.dat
 }}}
 
 There are many settings in PowerDNS that can affect the performance and effectiveness of this backend, please see [PDNSConfigurationGuide] for details on those
