Update issue 7 Changelog update

--- a/wiki/Changelog.wiki
+++ b/wiki/Changelog.wiki
@@ -14,6 +14,8 @@ Release focus: Stability and Robustness.
  * Added a rubygem build task and updated install docs etc [http://code.google.com/p/ruby-pdns/issues/detail?id=19 #19]
  * Change the logging output to only show the filename not the full path of the file that produced the log entry
  * Now prints the correct file and line where log lines are being created from  [http://code.google.com/p/ruby-pdns/issues/detail?id=22 #22]
+ * Modules like GeoIP can now have seperate config stanzas  [http://code.google.com/p/ruby-pdns/issues/detail?id=7 #7]
+
 
 == 0.3.1 - 2009/10/15 ==
 Release focus: Bug fixes and improved error handling
