Edited wiki page through web user interface.

--- a/wiki/Changelog.wiki
+++ b/wiki/Changelog.wiki
@@ -16,6 +16,7 @@ Release focus: Stability and Robustness.
  * Now prints the correct file and line where log lines are being created from  [http://code.google.com/p/ruby-pdns/issues/detail?id=22 #22]
  * Modules like GeoIP can now have seperate config stanzas  [http://code.google.com/p/ruby-pdns/issues/detail?id=7 #7]
  * GeoIP now has it's own config bits in config file  [http://code.google.com/p/ruby-pdns/issues/detail?id=23 #23]
+ * Initial set of unit tests have been added using ruby Test::Unit  [http://code.google.com/p/ruby-pdns/issues/detail?id=24 #24]
 
 
 == 0.3.1 - 2009/10/15 ==
