--- a/wiki/Changelog.wiki
+++ b/wiki/Changelog.wiki
@@ -1,8 +1,12 @@
 #summary Release history
 #labels Phase-Implementation
 
-== 0.4 - =
+== 0.4 - = 
 Release focus: Stability and Robustness.
+Release Candidates: rc1 - 2009/10/24
+
+ ||[ReferenceConstructingReplies_0_4 Constructing Replies]||[ReferenceInfoAboutRequests_0_4 About Requests]||[ReferenceGeoIP_0_4 GeoIP]||
+ ||[ReferenceRubyExtensions_0_4 Ruby Extensions]||||[ReferenceConfigurationGuide_0_4 Configuration Reference]||[ReferenceInstallGuide_0_4 Install Guide]||
 
  * Minor maintainability updates [http://code.google.com/p/ruby-pdns/issues/detail?id=13 #13], [http://code.google.com/p/ruby-pdns/issues/detail?id=18 #18]
  * Unparsable config lines should not prevent the framework from starting [http://code.google.com/p/ruby-pdns/issues/detail?id=16 #16]
