--- a/wiki/ReferenceInstallGuide_0_3.wiki
+++ b/wiki/ReferenceInstallGuide_0_3.wiki
@@ -1,5 +1,5 @@
 #summary Installation Guide
-#labels Phase-Historical
+#labels Phase-Historical,Deprecated                                                                                                                                                                                                                                                  
 
 = Installing Ruby PDNS =
 == Overview ==
