--- a/wiki/ReferenceConstructingReplies_0_4.wiki
+++ b/wiki/ReferenceConstructingReplies_0_4.wiki
@@ -1,5 +1,5 @@
 #summary Constructing the Answer
-#labels Phase-Implementation
+#labels Phase-Historical,Deprecated                                                                                                                                                                                                                                                  
 
 == Constructing the Answer ==
 
