--- a/wiki/ReferenceRubyExtensions_0_4.wiki
+++ b/wiki/ReferenceRubyExtensions_0_4.wiki
@@ -1,5 +1,5 @@
 #summary Extensions to the Ruby Language
-#labels Phase-Implementation
+#labels Phase-Historical,Deprecated                                                                                                                                                                                                                                                  
 = Extensions to the Ruby Language =
 
 <wiki:toc />
