--- a/wiki/ReleaseNotes_0_4.wiki
+++ b/wiki/ReleaseNotes_0_4.wiki
@@ -10,6 +10,8 @@ In addition to robustness improvements we've now added a tool that can be used t
 
 This release is available as a tarball, RPM, Source RPM and RubyGem on the [http://code.google.com/p/ruby-pdns/downloads/list downloads] page.
 
+This release does not break any backward compatibility with your records, however you do need to make a small change to the configuration file.  Please see further down below.
+
 == Documentation ==
 We tag the documentation for each release so you always have a good point in time reference, please find below links to Reference documentation for this branch
 
