--- a/wiki/Changelog.wiki
+++ b/wiki/Changelog.wiki
@@ -1,10 +1,13 @@
 #summary Release history
 #labels Phase-Implementation
 
-== 0.4 - = 
+== 0.1 - =
+Release focus: Feature Enhancement
+
+== 0.4 - 2009/08/30 = 
 Release focus: Stability and Robustness.
 
-Release Candidates: rc1 - 2009/10/24, Release Notes: [ReleaseNotes_0_4]
+Release Candidates: rc1 - 2009/08/24, Release Notes: [ReleaseNotes_0_4]
 
  ||[ReferenceConstructingReplies_0_4 Constructing Replies]||[ReferenceInfoAboutRequests_0_4 About Requests]||[ReferenceGeoIP_0_4 GeoIP]||
  ||[ReferenceRubyExtensions_0_4 Ruby Extensions]||||[ReferenceConfigurationGuide_0_4 Configuration Reference]||[ReferenceInstallGuide_0_4 Install Guide]||
@@ -24,13 +27,13 @@ Release Candidates: rc1 - 2009/10/24, Release Notes: [ReleaseNotes_0_4]
  * Initial set of unit tests have been added using ruby Test::Unit  [http://code.google.com/p/ruby-pdns/issues/detail?id=24 #24]
 
 
-== 0.3.1 - 2009/10/15 ==
+== 0.3.1 - 2009/08/15 ==
 Release focus: Bug fixes and improved error handling
 
  * The GeoIP code ignored the configured path to the geoip data and so blew up pretty badly, code is now more robust in handling errors and uses the config.  Thanks Christian Keil for the bug report.  [http://code.google.com/p/ruby-pdns/issues/detail?id=20 #20]
  * The main loop now has some exception handling and will log a backtrace when it dies, this should help with debugging.  Thanks Christian Keil for the bug report.  [http://code.google.com/p/ruby-pdns/issues/detail?id=21 #21]
 
-== 0.3 - 2009/10/03 ==
+== 0.3 - 2009/08/03 ==
 Release focus: Get major features completed.
 
  ||[ReferenceConstructingReplies_0_3 Constructing Replies]||[ReferenceInfoAboutRequests_0_3 About Requests]||[ReferenceGeoIP_0_3 GeoIP]||
