Update issue 29 Deprecate old docs

--- a/wiki/ReleaseNotes_0_4.wiki
+++ b/wiki/ReleaseNotes_0_4.wiki
@@ -1,5 +1,5 @@
-#summary Release Notes for 0.4
-#labels Phase-Deploy,Featured
+﻿#summary Release Notes for 0.4
+#labels Phase-Historical,Deprecated                                                                                                                                     
 
 = Introduction =
 We're pleased to announce release 0.4 of Ruby PDNS.
