--- a/wiki/ReferenceInstallGuide_0_4.wiki
+++ b/wiki/ReferenceInstallGuide_0_4.wiki
@@ -1,5 +1,5 @@
-#summary Installation Guide
-#labels Phase-Historical,Deprecated                                                                                                                                                                                                                                                  
+﻿#summary Installation Guide
+#labels Phase-Historical,Deprecated
 
 = Installing Ruby PDNS =
 == Overview ==
