Update issue 29 Deprecate old docs

--- a/wiki/ReferenceConstructingReplies_0_5.wiki
+++ b/wiki/ReferenceConstructingReplies_0_5.wiki
@@ -1,5 +1,5 @@
-#summary Constructing the Answer
-#labels Phase-Implementation
+﻿#summary Constructing the Answer
+#labels Phase-Historical,Deprecated                                                                                                                                     
 
 == Constructing the Answer ==
 
