--- a/wiki/ReferenceStatistics_0_5.wiki
+++ b/wiki/ReferenceStatistics_0_5.wiki
@@ -1,5 +1,5 @@
-#summary Statistics and Reporting
-#labels Phase-Deploy
+﻿#summary Statistics and Reporting
+#labels Phase-Historical,Deprecated                                                                                                                                     
 
 = Overview =
 
