--- a/wiki/ReferenceConfigurationGuide_0_5.wiki
+++ b/wiki/ReferenceConfigurationGuide_0_5.wiki
@@ -1,5 +1,5 @@
-#summary Ruby PDNS configuration guide
-#labels Phase-Deploy
+﻿#summary Ruby PDNS configuration guide
+#labels Phase-Historical,Deprecated                                                                                                                                     
 
 = Ruby PDNS configuration guide =
 Basic configuration goes into _/etc/pdns/pdns-ruby-backend.cfg_ by default, you can though specify an alternative location using the _--config_ command line option.
