--- a/wiki/ReferenceInstallGuide_0_5.wiki
+++ b/wiki/ReferenceInstallGuide_0_5.wiki
@@ -1,5 +1,5 @@
-#summary Installation Guide
-#labels Phase-Deploy
+﻿#summary Installation Guide
+#labels Phase-Historical,Deprecated                                                                                                                                     
 
 = Installing Ruby PDNS =
 == Overview ==
