--- a/wiki/ReferenceRubyExtensions_0_5.wiki
+++ b/wiki/ReferenceRubyExtensions_0_5.wiki
@@ -1,5 +1,5 @@
-#summary Extensions to the Ruby Language
-#labels Phase-Implementation
+﻿#summary Extensions to the Ruby Language
+#labels Phase-Historical,Deprecated                                                                                                                                     
 = Extensions to the Ruby Language =
 
 <wiki:toc />
