Edited wiki page through web user interface.

--- a/wiki/Changelog.wiki
+++ b/wiki/Changelog.wiki
@@ -4,7 +4,7 @@
 == 0.5 - =
 Release focus: Feature Enhancement
 
-Release Candidates: rc1 - 2009/10/xx, Release Notes: [ReleaseNotes_0_5]
+Release Candidates: rc1 - 2009/10/03, Release Notes: [ReleaseNotes_0_5]
 
  ||[ReferenceConstructingReplies_0_5 Constructing Replies]||[ReferenceStatistics_0_5 Statistics]||||[ReferenceInfoAboutRequests_0_5 About Requests]||[ReferenceGeoIP_0_5 GeoIP]||
  ||[ReferenceRubyExtensions_0_5 Ruby Extensions]||||[ReferenceConfigurationGuide_0_5 Configuration Reference]||[ReferenceInstallGuide_0_5 Install Guide]||
